# wolpertinger

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen-clean.sh  autogen.sh  check-pylint.sh  configure.ac  pylintrc
data/: KEEPTHIS  Makefile.am  create_db.py  wolper-services  wolpertinger.sql
docs/: Makefile.am
scripts/: Makefile.am  wolper-init.in  wolper-mcp.in  wolper.service.in  wolperctl.in
scripts/modules/: Makefile.am  latex.py  nmap.py  wolper_xml.py
src/: Makefile.am  database.cc  database.h  drone.cc  drone.h  ipc.cc  ipc.h  main.cc  main.h  net.cc  net.h  shared.cc  shared.h  wolperdrone.cc  wolperdrone.h
test/: Makefile.am  drone_test.cc  metaipc_test.cc  net_test.cc  time_test.cc
